Update Project 1 to Daily Spark Quotes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,10 +12,12 @@ website:
         text: Home
       - href: about.qmd
         text: About
+      - href: problems.qmd
+        text: Problems
       - text: Projects
         menu:
           - href: projects/project-1.qmd
-            text: Name of my first app
+            text: Daily Spark Quotes
           #- href: projects/project-2.qmd
           #  text: Business Case Presentation
           #- href: projects/project-3.qmd
